# rust-ma

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml  release.yaml
src/: constants.rs  did.rs  doc.rs  error.rs  identity.rs  key.rs  lib.rs  msg.rs  multiformat.rs
