[package]
name = "ma-did"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "DID and message primitives for the ma actor stack"
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/bahner/rust-ma"
homepage = "https://github.com/bahner/rust-ma"
documentation = "https://docs.rs/ma-did"
keywords = ["did", "identity", "messaging", "multiformat", "iroh"]

[dependencies]
blake3 = "1.8"
chacha20poly1305 = "0.10"
cid = "0.11"
ciborium = "0.2"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
multibase = "0.9"
nanoid = "0.4"
rand_core = { version = "0.6", features = ["getrandom"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
unsigned-varint = "0.8"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
